# ipfs-cid

./: Cargo.toml  README.md  SECURITY.md  crates-io.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: file0  file1  file2  hashes.md
examples/: demo.rs
src/: error.rs  lib.rs  main.rs
tests/: unit.rs
